[project]
name = "langgraph-agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "langchain-tavily>=0.2.18",
    "langchainhub>=0.1.21",
    "langgraph>=1.2.5",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]

[tool.pytest.ini_options]
pythonpath = ["."]
